[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Red-Lavalink"
description = "Lavalink client library for Red-DiscordBot"
license = { file = "LICENSE" }
readme = "README.rst"
authors = [
    { name = "Cog Creators" },
    { name = "tekulvw" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Sound/Audio :: Players",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8.1"
dependencies = [
    "aiohttp>=3.6.0",
    "discord.py>=1.5.1",
    "Red-Commons>=1.0.0,<2",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "pytest>=7",
    "pytest-asyncio>=0.19",
]
doc = [
    "sphinx",
    "sphinxcontrib-trio",
    "sphinx_rtd_theme",
]

[project.urls]
"Homepage" = "https://github.com/Cog-Creators/Red-Lavalink"
"Discord Server" = "https://discord.gg/red"
"Documentation" = "https://red-lavalink.readthedocs.io"
"Donate on Patreon" = "https://www.patreon.com/Red_Devs"
"Issue Tracker" = "https://github.com/Cog-Creators/Red-Lavalink/issues"
"Source Code" = "https://github.com/Cog-Creators/Red-Lavalink"

[tool.black]
line-length = 99
required-version = '22.6.0'
target-version = ['py38']
include = '\.py$'

[tool.pytest.ini_options]
asyncio_mode = 'auto'
