[metadata]
name = Red-Lavalink
version = attr: lavalink.__version__
url = https://github.com/Cog-Creators/Red-Lavalink
license = GPLv3
author = tekulvw
description = Lavalink client library for Red-DiscordBot
long_description = file: README.rst
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: AsyncIO
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Natural Language :: English
    Programming Language :: Python :: 3.7
    Topic :: Multimedia :: Sound/Audio :: Players
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages =
    lavalink
python_requires = >=3.7.5
install_requires =
    discord.py==1.2.5
    websockets>=6.0,!=7.0,!=8.0,!=8.0.1,<9.0

[options.extras_require]
tests =
    pytest==5.3.2
    pytest-asyncio==0.10.0
    async_generator
docs =
    sphinx
    sphinxcontrib-asyncio
    sphinx_rtd_theme
