[metadata]
name = Red-Lavalink
url = https://github.com/Cog-Creators/Red-Lavalink
license = GPLv3
author = tekulvw
description = Lavalink client library for Red-DiscordBot
long_description = file: README.rst
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: AsyncIO
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Multimedia :: Sound/Audio :: Players
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages =
    lavalink
python_requires = >3.8.0, <3.9
install_requires =
    discord.py>=1.5.1
    aiohttp>=3.6.0

[options.extras_require]
tests =
    pytest>3.0.6
    pytest-asyncio
    async_generator
docs =
    sphinx
    sphinxcontrib-asyncio
    sphinx_rtd_theme
